# models/music_video.go
@@ -21,6 +21,7 @@ type MusicVideo struct {
 	TotalStream *int           `json:"total_stream" gorm:"default:0"`
 	IsApproved  *int           `json:"is_approved" gorm:"type:tinyint;default:0"`
 	ApprovedBy  *int           `json:"approved_by" gorm:"index"`
+	SubmittedBy string         `json:"submitted_by" gorm:"type:enum('artist','label','admin');default:'artist'"`
 	IsHighlight *int           `json:"is_highlight" gorm:"type:tinyint(1);default:0"`
 	CreatedAt   time.Time      `json:"created_at"`
 	UpdatedAt   time.Time      `json:"updated_at"`
